--- a/_includes/head.html
+++ b/_includes/head.html
@@ -171,5 +171,6 @@
       {% include {{ file }} %}
     {% endfor %}
   {% endif %}
-
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7493222841935730" crossorigin="anonymous"></script>
 </head>
